2007-09-14  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorinvocationexpression.vala,
	  gobject/valacodegeneratorsignal.vala: fix late bound methods and
	  signals, fixes bug 476953

2007-09-13  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratormethod.vala: generate C code comment for
	  abstract methods

2007-09-13  Jürg Billeter  <j@bitron.ch>

	* vapigen/valagidlparser.vala: don't remove first parameter of creation
	  methods

	* vapi/gdk-2.0.vala, vapi/gstreamer-0.10.vala, vapi/gtk+-2.0.vala,
	  vapi/gtksourceview-2.0.vala, vapi/libsoup-2.2.vala, vapi/pango.vala:
	  regenerated

2007-09-10  Jürg Billeter  <j@bitron.ch>

	* doc/vala/structs.xml: document struct declarations

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: detect interface prerequisite cycle

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valainterface.vala,
	  vala/valasymbolresolver.vala: detect base class cycle

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: support typeof expressions for arrays

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vala: add GLib.Type.INVALID constant

2007-09-09  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: support static classes

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* tests/classes.exp, tests/classes.vala: add class declaration test

	* tests/Makefile.am: update

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorclass.vala: fix support for static classes

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y: ensure there is always a default construction method
	  for non-abstract non-VAPI classes

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorclass.vala: append the generated free
	  function to the right file fragment

2007-09-08  Jürg Billeter  <j@bitron.ch>

	* gobject/valacodegeneratorsignal.vala: report an error when trying to
	  define a signal in a type not deriving from GLib.Object
